# cashbook-v10-

./: .env.example  .gitignore  .vercelignore  README.md  app.js  backup.json  implementation_plan.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  restore_backup.py  start-app.bat  styles.css  tsconfig.json  vercel.json  verify_restoration.py
.github/workflows/: node.js.yml  pylint.yml
api/: index.py
api/cron/backup-sync/: route.ts
api/upload/: route.ts
backend/: README_BACKEND.md  __init__.py  sitecustomize.py  uvicorn.cmd
backend/app/: __init__.py  auth_dependencies.py  config.py  crud.py  csv_import.py  database.py  main.py  models.py  payroll.py  schemas.py  utils.py
backend/app/routes/: __init__.py  accounts.py  auth.py  backup.py  employees.py  neon_auth.py  reports.py  settings.py  transactions.py
backend/scripts/: migrate_sqlite_to_postgres.py  restore_backup.py
backend/tests/: test_backup_restore.py  test_csv_import.py  test_deployment.py  test_employee_salary_flow.py  test_security.py  test_transaction_schemas.py
backend/uvicorn/: __main__.py
docs/superpowers/plans/: 2026-06-15-employees-salary-system.md
docs/superpowers/specs/: 2026-06-15-employees-salary-system-design.md
frontend/: .env.example  README_FRONTEND.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  auth.js  index.css  main.jsx
frontend/src/components/: CompanyLogo.jsx  ConfirmDialog.jsx  DateDisplay.jsx  DateField.jsx  GlassCard.jsx  GlassPrintPreview.jsx  LedgerTable.jsx  Sidebar.jsx  (+15 more)
(+39 files in other folders)
