[project]
name = "app"
version = "0.1.0"
dependencies = [ "fastapi>=0.115.8", "uvicorn[standard]>=0.34.0", "sqlalchemy>=2.0.38", "pydantic>=2.12.0", "python-multipart>=0.0.20", "openpyxl>=3.1.5", "bcrypt>=4.1.0", "pg8000>=1.31.2", "pyjwt>=2.8.0", "cryptography>=41.0.0" ]
requires-python = "~=3.12.0"
